Opened 13 years ago

Closed 13 years ago

#2858 closed defect (fixed)

libilbc: iLBC frame mode not indicated

Reported by: ami_stuff Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: mov libilbc
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://www1.datafilehost.com/d/067e0d19

C:\>ffmpeg -i ilbc.mov -acodec libilbc -vn out.mov
ffmpeg version N-55393-g3b2e99f Copyright (c) 2000-2013 the FFmpeg developers
  built on Aug  8 2013 21:32:57 with gcc 4.7.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvo-aacenc --enable-libvo-
amrwbenc --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --
enable-libxvid --enable-zlib
  libavutil      52. 41.100 / 52. 41.100
  libavcodec     55. 24.100 / 55. 24.100
  libavformat    55. 13.102 / 55. 13.102
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 82.100 /  3. 82.100
  libswscale      2.  4.100 /  2.  4.100
  libswresample   0. 17.103 /  0. 17.103
  libpostproc    52.  3.100 / 52.  3.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'ilbc.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2009-11-06 23:21:15
  Duration: 00:00:12.64, start: 0.000000, bitrate: 1663 kb/s
    Stream #0:0(eng): Audio: ilbc (ilbc / 0x63626C69), 8000 Hz, mono, s16
    Metadata:
      creation_time   : 2009-11-06 23:21:15
      handler_name    : Procedura obs│ugi skrˇtˇw danych Apple
    Stream #0:1(eng): Video: mpeg4 (Advanced Simple Profile) (mp4v / 0x7634706D)
, yuv420p, 320x240 [SAR 1:1 DAR 4:3], 1645 kb/s, 23.97 fps, 23.97 tbr, 1000k tbn
, 1k tbc
    Metadata:
      creation_time   : 2009-11-06 23:21:15
      handler_name    : Procedura obs│ugi skrˇtˇw danych Apple
Output #0, mov, to 'out.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    encoder         : Lavf55.13.102
    Stream #0:0(eng): Audio: ilbc (libilbc) (ilbc / 0x63626C69), 8000 Hz, mono,
s16
    Metadata:
      creation_time   : 2009-11-06 23:21:15
      handler_name    : Procedura obs│ugi skrˇtˇw danych Apple
Stream mapping:
  Stream #0:0 -> #0:0 (libilbc -> libilbc)
Press [q] to stop, [?] for help
size=      24kB time=00:00:12.62 bitrate=  15.6kbits/s
video:0kB audio:23kB subtitle:0 global headers:0kB muxing overhead 2.860956%
C:\>ffmpeg -i out.mov -f null -
ffmpeg version N-55393-g3b2e99f Copyright (c) 2000-2013 the FFmpeg developers
  built on Aug  8 2013 21:32:57 with gcc 4.7.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvo-aacenc --enable-libvo-
amrwbenc --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --
enable-libxvid --enable-zlib
  libavutil      52. 41.100 / 52. 41.100
  libavcodec     55. 24.100 / 55. 24.100
  libavformat    55. 13.102 / 55. 13.102
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 82.100 /  3. 82.100
  libswscale      2.  4.100 /  2.  4.100
  libswresample   0. 17.103 /  0. 17.103
  libpostproc    52.  3.100 / 52.  3.100
[libilbc @ 029d7f40] iLBC frame mode not indicated
    Last message repeated 1 times
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'out.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 512
    compatible_brands: qt
    encoder         : Lavf55.13.102
  Duration: 00:00:12.62, start: 0.000000, bitrate: 15 kb/s
    Stream #0:0(eng): Audio: ilbc (ilbc / 0x63626C69), 8000 Hz, mono
    Metadata:
      handler_name    : DataHandler
[graph 0 input from stream 0:0 @ 02abbfa0] Invalid sample format (null)
Error opening filters!

Change History (2)

comment:1 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavformat
Keywords: mov libilbc added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 13 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.